Correct main logo in dark mode

--- a/components/Navigation/Header.module.scss
+++ b/components/Navigation/Header.module.scss
@@ -24,8 +24,11 @@
 
     .Logo {
       max-width: 12rem;
-      border-radius: 1rem;
       cursor: pointer;
+
+      img {
+        border-radius: 1rem;
+      }
     }
 
     svg {
